data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3561.wast
;; 10. **Test for Function Calls within Loops**:    - **Description**: Invoke functions within loop constructs and verify proper handling of loop and call stack.    - **Constraint Checked**: Correct handling and execution of call instructions inside loops.    - **CFG Relevance**: Ensures control flow across iterations and function calls remains consistent.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $test-loop (param i32) (result i32)
      (local i32)
      (loop $loop
        (local.set 0 (i32.add (local.get 0) (i32.const 1)))
        (call 0 (local.get 0))
        (br_if $loop (i32.lt_s (local.get 0) (i32.const 10)))
      )
    )
  )
  "unknown function"
)